# JennAI

./: .env.example  .gitignore  README.md  boilerplate.ipynb  celery_app.py  check_apps.py  conftest.py  dump.rdb  environment.yaml  full_reset.bat  image_processing_api.py  main.py  mi_tasks.py  monorepo.ipynb  plan.md  pyproject.toml  pyrepopal.ipynb  pytest.ini  requirements.ps1  requirements.txt  test_42_startup.py  test_import.py
Brand/: vision.md  website-examples.md
admin/: 42.py  42_data_samples_create.py  42_present.py  43.py  Python_Cleanup.ps1  Remove-PythonCaches.ps1  __init__.py  admin.py  admin1.py  check_dependencies.py  check_env_vars.py  check_logs.py  cleanup.py  compile_scss.py  conda_create.py  conda_remove.py  conda_update.py  contractor_validation.py  copy _brand_to_flask.py  create_directories.py  create_mock_data.py  create_presentation_angular.py  create_presentation_flask.py  create_presentation_react.py  create_presentation_vue.py  create_project_folders.py  environment.yaml.phase2  full_reset.bat  generate_allure_environment.py  inject_brand_assets.py  install_pytorch.py  install_requirements.py  logo_prompt.txt  post_setup.ps1  presentation_overview.txt  presentation_utils.py  project-core.ipynb  project_tree_visualization.ipynb  report_tests.sh  run_regression.py  (+11 more)
admin/templates/flask/: app.py.template
blueprints/: architectural_blueprint.md  brand_integration_blueprint.md  technical_specification.json
config/: config.py  gemini_api.py  loguru_setup.py  setup_project.py
core/: dependency_container.py
notebooks/: debug_entanglement_imports.ipynb  p.ipynb  prep_dependency.ipynb  presentation_setup.ipynb
src/business/: pyrepopal_workflow_service.py
src/business/ai/: ai_response_parser.py  data_collect_service.py  gemini_api.py  repo_data_collector.py
src/business/data_source/: __init__.py  filesystem_data_source.py
src/business/interfaces/: IAIService.py  IRepositoryDataSource.py  IUserManager.py
src/business/prp_workflow/: __init__.py
src/business/sys/: __init__.py  sys_profiler.py
src/business/tests/: test_pyrepopal_workflow_service.py
src/data/database/: prp.db  pyrepopal.db
src/data/generated_prompts/: sample_repo_analysis_prompt.txt
src/data/implementations/: ai_analysis_result_sqlite_repository.py  analysis_session_sqlite_repository.py  generated_prompt_sqlite_repository.py  repository_snapshot_sqlite_repository.py  sqlite_repository.py  system_profile_sqlite_repository.py
src/data/interfaces/: ICrudRepository.py
src/data/notebooks/: datadesign.ipynb
src/data/sample/: README.md  requirements.txt
src/data/scripts/: __init__.py
src/data/system_info/: hardware_specs.json
src/data/tests/: conftest.py
src/presentation/: 42.py  config.py  theme.txt  universe.html
src/presentation/brand/: theme.scss  vision.md
src/presentation/img/: jennai-logo  under_construction
src/presentation/tests/: conftest.py  (+22 more)
src/validation/: validator.py
tests/: test_00_system_dependencies.py  test_brand_assets.py  test_brand_integration.py  test_cuda.py  test_flask_app.py  test_main_integration.py  test_workflow_persona
tests/integration/: __init__.py  test_full_workflow_with_sample_repo.py
tests/presentation/: __init__.py  test_flask_routes.py
tests/sample_repos/: __init__.py
(+47 files in other folders)
